--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-draggable": "^4.4.6",
+    "react-live-clock": "^6.1.23-beta",
     "react-measure": "^2.5.2",
     "react-timer-hook": "^3.0.7",
     "react-use-measure": "^2.1.1",
