--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/font": "^14.2.4",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.43.6",
     "@types/node": "20.14.2",
