--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,24 @@
+// {
+//   "extends": "next/core-web-vitals",
+//   "rules": {
+//     "react/no-unescaped-entities": "off",
+//     "@next/next/no-page-custom-font": "off"
+//   }
+// }
+
 {
-  "extends": "next/core-web-vitals"
+  "root": true,
+  "extends": [],
+  "rules": {
+    "no-unused-vars": "off",
+    "no-undef": "off"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "ignorePatterns": ["**/*"]
 }
